@startuml

class Jugador{
    + colocarEjercitosEn(unaCantidadEjercitos:Integer, unPais:Pais): void
    +canjearTarjetas(tarjetas:ArrayList):int
    +activarTarjetaPais(unaTarjetaPais:TarjetaPais):void

}
interface Canje{
}
class PrimerCanje{
    + realizarCanje(tarjetasPais:ArrayList):int
    +actualizarCanje():Canje
}
class SegundoCanje{
    + realizarCanje(tarjetasPais:ArrayList):int
    +actualizarCanje():Canje
}
class TresOMasCanjes{
    + realizarCanje(tarjetasPais:ArrayList):int
    +actualizarCanje():Canje
}
class TarjetaPais{
    - estaACtivaada:boolean
    + activarTarjet():void
    + paisEsDe(unJugoador:Jugador):boolean
    + esDelMismoTipo(unaTarjeta:TarjetaPais):boolean
}

Jugador --> Canje
Canje <|--PrimerCanje
Canje <|--SegundoCanje
Canje <|--TresOMasCanjes

Jugador --> MazoTarjetasPais
MazoTarjetasPais --> TarjetaPais


@enduml